--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "framer-motion": "^10.0.1",
     "jsonwebtoken": "^9.0.0",
     "magic-sdk": "^13.5.0",
-    "next": "13.1.6",
+    "next": "^13.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-modal": "^3.16.1",
